force-app/main/default/objects/OrgSetupValue__c/OrgSetupValue__c.object-meta.xml
<CustomObject>
    <description>Setup Value information retrieved from polling for search functionality</description>
    <label>OrgSetupValue</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgSetupValues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>