force-app/main/default/objects/OrgSetupValue__c/fields/MasterSource__c.field-meta.xml
<CustomField>
    <fullName>MasterSource__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Is this a property or corporate level setup value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MasterSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>