force-app/main/default/objects/OrgSetupValue__c/fields/SetupValueCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>SetupValueCreatedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date this SetupValue was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SetupValueCreatedDate</label>
    <type>DateTime</type>
</CustomField>