force-app/main/default/objects/OrgSetupValue__c/fields/SetupValueLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>SetupValueLastModifiedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date this SetupValue was last modified</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SetupValueLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>