force-app/main/default/objects/OrgSetupValue__c/fields/SetupValueName__c.field-meta.xml
<CustomField>
    <fullName>SetupValueName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>SetupValueName</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SetupValueName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>