force-app/main/default/objects/OrgSetupValue__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>SortOrder of the setup field</description>
    <label>SortOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>