force-app/main/default/objects/OrgSetupValue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Type of the Setup Value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>